--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous"
-    />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/styleArvore.css">
     <title>Árvore</title>
-
 </head>
 <body>
-<div class="container">
-    <h2>Árvore</h2>
-    <div class="tree">
-    </div>
+<div>
+    <h2 class="text-center">Árvore</h2>
+    <div class="tree"></div>
+</div>
+<div class="uploadArquivos">
+    <form id="uploadForm" action="https://localhost:8080/arvore/avl/uploadTXT" method="POST" enctype="multipart/form-data">
+        <input type="file" id="file" name="avatar" accept=".txt">
+        <button type="submit">Processar</button>
+    </form>
 </div>
 
-<script src="../static/js/scriptArvore.js"></script>
 
+
+
+<script src="../static/js/scriptArvore.js"></script>
 </body>
 </html>
