--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,20 +9,72 @@
     <title>Árvore</title>
 </head>
 <body>
-<div>
-    <h2 class="text-center">Árvore</h2>
-    <div class="tree"></div>
-</div>
-<div class="uploadArquivos">
-    <form id="uploadForm" action="https://localhost:8080/arvore/avl/uploadTXT" method="POST" enctype="multipart/form-data">
-        <input type="file" id="file" name="avatar" accept=".txt">
-        <button type="submit">Processar</button>
-    </form>
-</div>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="https://img.icons8.com/pulsar-color/48/tree.png" alt="tree" width="30" height="24" class="d-inline-block align-text-top">
+                Árvores
+            </a>
 
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bootstrap-reboot" viewBox="0 0 16 16" onclick="reloadPage()">
+                <path d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 1 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.812 6.812 0 0 0 1.16 8z"/>
+                <path d="M6.641 11.671V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352h1.141zm0-3.75V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324h-1.6z"/>
+            </svg>
+        </div>
+    </nav>
+    <div class="body-content">
+        <div class="arvore hidden">
+            <h2 class="text-center">Árvore</h2>
+            <div class="tree"></div>
+        </div>
+        <div class="divDosBotoes">
+            <div class="uploadArquivos">
+                <div class="toggleButtons">
+                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                        <label class="btn btn-outline-primary" for="btnradio1">ALV</label>
 
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btnradio2">Binária</label>
+                    </div>
+                </div>
+                <div class="formArquivo">
+                    <form id="uploadForm" action="https://localhost:8080/arvore/avl/uploadTXT" method="POST" enctype="multipart/form-data">
+                        <input type="file" id="file" accept=".txt">
+                        <button class="btn btn-success" type="submit">Processar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bottomPage">
+        <div class="frequenciaPalavras hidden">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Palavra</th>
+                        <th scope="col">Qtde.</th>
+                    </tr>
+                </thead>
+                <tbody class="listaTable"></tbody>
+            </table>
+        </div>
+        <div class="contadoresArvore hidden">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Informações da árvore</th>
+<!--                    <th scope="col">Qtde.</th>-->
+                </tr>
+                </thead>
+                <tbody class="dados">
 
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-<script src="../static/js/scriptArvore.js"></script>
+    <script src="../static/js/scriptArvore.js"></script>
+    <script src="js/APIRequests.js"></script>
 </body>
 </html>
