FIX | Ajuste de detalhes no JS

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="formArquivo">
-                    <form id="uploadForm" action="https://localhost:8080/arvore/avl/uploadTXT" method="POST" enctype="multipart/form-data">
+                    <form id="uploadForm" method="POST" enctype="multipart/form-data">
                         <input type="file" id="file" accept=".txt">
                         <button class="btn btn-success" type="submit">Processar</button>
                     </form>
