--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/styleArvore.css">
     <title>Árvore</title>
+    <script>
+        function mostrarArvoreAVL(){
+            btnAVL = true;
+            exibirArvore();
+        }
+
+        function mostrarArvoreBinaria(){
+            btnAVL = false;
+            exibirArvore();
+        }
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
@@ -17,10 +28,10 @@
             </a>
 
             <div class="btn-group btnNavTipoArvore hidden" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked onclick="selectedTreeType(1)">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked onclick="mostrarArvoreAVL()">
                 <label class="btn btn-outline-info" for="btnradio1">ALV</label>
 
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" onclick="selectedTreeType(2)">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" onclick="mostrarArvoreBinaria()">
                 <label class="btn btn-outline-info" for="btnradio2">Binária</label>
             </div>
 
@@ -62,14 +73,38 @@
                 <tbody class="listaTable"></tbody>
             </table>
         </div>
-        <div class="contadoresArvore hidden">
+        <div class="contadoresArvore arvoreAVL hidden">
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">Informações da árvore</th>
+                    <th scope="col">Árvore AVL</th>
                 </tr>
                 </thead>
-                <tbody class="dados">
+                <tbody class="dadosArvAVL">
+
+                </tbody>
+            </table>
+        </div>
+        <div class="contadoresArvore arvoreBinaria hidden">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Árvore Binária</th>
+                </tr>
+                </thead>
+                <tbody class="dadosArvBinario">
+
+                </tbody>
+            </table>
+        </div>
+        <div class="contadoresArvore vetorBinario hidden">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Vetor Binário</th>
+                </tr>
+                </thead>
+                <tbody class="dadosVetorBinario">
 
                 </tbody>
             </table>
