--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/styleArvore.css">
     <title>Árvore</title>
+    <script>
+        function mostrarArvoreAVL(){
+            btnAVL = true;
+            exibirArvore();
+        }
+
+        function mostrarArvoreBinaria(){
+            btnAVL = false;
+            exibirArvore();
+        }
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
@@ -16,6 +27,14 @@
                 Árvores
             </a>
 
+            <div class="btn-group btnNavTipoArvore hidden" role="group" aria-label="Basic radio toggle button group">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked onclick="mostrarArvoreAVL()">
+                <label class="btn btn-outline-info" for="btnradio1">ALV</label>
+
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" onclick="mostrarArvoreBinaria()">
+                <label class="btn btn-outline-info" for="btnradio2">Binária</label>
+            </div>
+
             <svg id="reloadButton" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bootstrap-reboot" viewBox="0 0 16 16" onclick="reloadPage()">
                 <path d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 1 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.812 6.812 0 0 0 1.16 8z"/>
                 <path d="M6.641 11.671V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352h1.141zm0-3.75V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324h-1.6z"/>
@@ -23,21 +42,16 @@
         </div>
     </nav>
     <div class="body-content">
+        <div class="msgCarregando hidden">
+            <h3>Processando árvore</h3>
+            <h5>Aguarde instantes</h5>
+        </div>
         <div class="arvore hidden">
             <h2 class="text-center">Árvore</h2>
             <div class="tree"></div>
         </div>
         <div class="divDosBotoes">
             <div class="uploadArquivos">
-                <div class="toggleButtons">
-                    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked onclick="selectedTreeType(1)">
-                        <label class="btn btn-outline-primary" for="btnradio1">ALV</label>
-
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" onclick="selectedTreeType(2)">
-                        <label class="btn btn-outline-secondary" for="btnradio2">Binária</label>
-                    </div>
-                </div>
                 <div class="formArquivo">
                     <form id="uploadForm" method="POST" enctype="multipart/form-data">
                         <input type="file" id="file" accept=".txt">
@@ -59,15 +73,38 @@
                 <tbody class="listaTable"></tbody>
             </table>
         </div>
-        <div class="contadoresArvore hidden">
+        <div class="contadoresArvore arvoreAVL hidden">
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">Informações da árvore</th>
-<!--                    <th scope="col">Qtde.</th>-->
+                    <th scope="col">Árvore AVL</th>
                 </tr>
                 </thead>
-                <tbody class="dados">
+                <tbody class="dadosArvAVL">
+
+                </tbody>
+            </table>
+        </div>
+        <div class="contadoresArvore arvoreBinaria hidden">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Árvore Binária</th>
+                </tr>
+                </thead>
+                <tbody class="dadosArvBinario">
+
+                </tbody>
+            </table>
+        </div>
+        <div class="contadoresArvore vetorBinario hidden">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Vetor Binário</th>
+                </tr>
+                </thead>
+                <tbody class="dadosVetorBinario">
 
                 </tbody>
             </table>
