FEATURE | Arvore B e B+ implementadas

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -73,41 +73,69 @@
                 <tbody class="listaTable"></tbody>
             </table>
         </div>
-        <div class="contadoresArvore arvoreAVL hidden">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Árvore AVL</th>
-                </tr>
-                </thead>
-                <tbody class="dadosArvAVL">
+        <div>
+            <div class="contadoresArvore arvoreAVL hidden">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Árvore AVL</th>
+                    </tr>
+                    </thead>
+                    <tbody class="dadosArvAVL">
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
+            <div class="contadoresArvore arvoreBinaria hidden">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Árvore Binária</th>
+                    </tr>
+                    </thead>
+                    <tbody class="dadosArvBinario">
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="contadoresArvore vetorBinario hidden">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Vetor Binário</th>
+                    </tr>
+                    </thead>
+                    <tbody class="dadosVetorBinario">
+
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <div class="contadoresArvore arvoreBinaria hidden">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Árvore Binária</th>
-                </tr>
-                </thead>
-                <tbody class="dadosArvBinario">
+        <div>
+            <div class="contadoresArvore arvoreB hidden">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Árvore B</th>
+                    </tr>
+                    </thead>
+                    <tbody class="dadosArvoreB">
 
-                </tbody>
-            </table>
-        </div>
-        <div class="contadoresArvore vetorBinario hidden">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Vetor Binário</th>
-                </tr>
-                </thead>
-                <tbody class="dadosVetorBinario">
+                    </tbody>
+                </table>
+            </div>
+            <div class="contadoresArvore arvoreBPlus hidden">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Arvore B+</th>
+                    </tr>
+                    </thead>
+                    <tbody class="dadosArvoreBPlus">
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
